--- a/src/Client/public/index.html
+++ b/src/Client/public/index.html
@@ -4,7 +4,7 @@
     <title>Proxy Croak Codes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="elmish-app"></div>
-    <script src="./public/bundle.js"></script>
+    <script src="/js/vendors.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
